Modernize Java code: remove legacy APIs and improve type safety
- Replace Vector with ArrayList in GraphSaveObject
- Replace deprecated javax.xml.bind.DatatypeConverter with java.util.Base64
- Replace raw Enumeration/Class types with typed generics in ExtensionClassLoader
- Add try-with-resources for FileInputStream and ZipFile in ExtensionClassLoader
- Replace string concatenation in loops with StringBuilder in AlgorithmUtils
- Simplify isConnected() to use stream().distinct().count()
- Fix raw ArrayX types to ArrayX<?> across preferences classes (AbstractPreference,
  GraphPreferences, UserDefinedEligiblity, ArrowHandler)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>